# ego-graph

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
egograph/pipelines/: .env.example  README.md  __init__.py  app.py  config.py  main.py  pyproject.toml  service.py
egograph/pipelines/api/: __init__.py  browser_history.py  dependencies.py  health.py  runs.py  workflows.py
egograph/pipelines/domain/: __init__.py  errors.py  schedule.py  workflow.py
egograph/pipelines/infrastructure/: __init__.py
egograph/pipelines/infrastructure/db/: connection.py  repositories.py  run_repository.py  schema.py
egograph/pipelines/infrastructure/dispatching/: __init__.py  lock_manager.py  run_dispatcher.py
egograph/pipelines/infrastructure/execution/: __init__.py  inprocess_executor.py  log_store.py  subprocess_executor.py
egograph/pipelines/infrastructure/scheduling/: apscheduler_app.py
egograph/pipelines/sources/: __init__.py
egograph/pipelines/sources/browser_history/: __init__.py  compaction.py  ingest_pipeline.py  pipeline.py  storage.py  transform.py  youtube_extraction.py  youtube_metadata.py
egograph/pipelines/sources/common/: __init__.py  bootstrap_compact.py  compaction.py  config.py  settings.py  utils.py
egograph/pipelines/sources/github/: __init__.py  ingest_pipeline.py  pipeline.py  storage.py
egograph/pipelines/sources/google_activity/: main.py  pipeline.py  transform.py  youtube_api.py
egograph/pipelines/tests/: __init__.py  test_api.py  test_dispatcher.py
egograph/pipelines/workflows/: __init__.py  registry.py
(+257 files in other folders)
