[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egograph-pipelines"
version = "0.1.0"
description = "Pipeline scheduler and run management service for EgoGraph"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "boto3>=1.35.0",
    "duckdb>=1.1.0",
    "fastapi>=0.115.0",
    "pandas>=2.0.0",
    "playwright>=1.48.0",
    "pyarrow>=14.0.0",
    "python-dateutil>=2.9.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.0",
    "spotipy>=2.25.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]

[tool.hatch.build]
dev-mode-dirs = [".."]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]
